--- a/Bike_Notebook.ipynb
+++ b/Bike_Notebook.ipynb
@@ -54,23 +54,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 2,
       "metadata": {
         "id": "FVYwaObI8DC1"
       },
-      "outputs": [
-        {
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'pandas'",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mModuleNotFoundError\u001b[39m                       Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[11]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[32m      1\u001b[39m \u001b[38;5;66;03m# prompt: import pandas, import numpy, import scipy, import matplotlib, import seaborn, import stremlit\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m3\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpandas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mpd\u001b[39;00m\n\u001b[32m      4\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnumpy\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mas\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mnp\u001b[39;00m\n\u001b[32m      5\u001b[39m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01mscipy\u001b[39;00m\n",
-            "\u001b[31mModuleNotFoundError\u001b[39m: No module named 'pandas'"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# prompt: import pandas, import numpy, import scipy, import matplotlib, import seaborn, import stremlit\n",
         "\n",
@@ -102,7 +90,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -113,15 +101,279 @@
       },
       "outputs": [
         {
-          "ename": "NameError",
-          "evalue": "name 'pd' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m Day_df=\u001b[43mpd\u001b[49m.read_csv(\u001b[33m\"\u001b[39m\u001b[33mdata/day.csv\u001b[39m\u001b[33m\"\u001b[39m,delimiter=\u001b[33m'\u001b[39m\u001b[33m,\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      2\u001b[39m Hour_df=pd.read_csv(\u001b[33m\"\u001b[39m\u001b[33mdata/hour.csv\u001b[39m\u001b[33m\"\u001b[39m, delimiter=\u001b[33m'\u001b[39m\u001b[33m,\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m      3\u001b[39m Hour_df.head(\u001b[32m10\u001b[39m)\n",
-            "\u001b[31mNameError\u001b[39m: name 'pd' is not defined"
-          ]
+          "data": {
+            "text/html": [
+              "<div>\n",
+              "<style scoped>\n",
+              "    .dataframe tbody tr th:only-of-type {\n",
+              "        vertical-align: middle;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe tbody tr th {\n",
+              "        vertical-align: top;\n",
+              "    }\n",
+              "\n",
+              "    .dataframe thead th {\n",
+              "        text-align: right;\n",
+              "    }\n",
+              "</style>\n",
+              "<table border=\"1\" class=\"dataframe\">\n",
+              "  <thead>\n",
+              "    <tr style=\"text-align: right;\">\n",
+              "      <th></th>\n",
+              "      <th>instant</th>\n",
+              "      <th>dteday</th>\n",
+              "      <th>season</th>\n",
+              "      <th>yr</th>\n",
+              "      <th>mnth</th>\n",
+              "      <th>hr</th>\n",
+              "      <th>holiday</th>\n",
+              "      <th>weekday</th>\n",
+              "      <th>workingday</th>\n",
+              "      <th>weathersit</th>\n",
+              "      <th>temp</th>\n",
+              "      <th>atemp</th>\n",
+              "      <th>hum</th>\n",
+              "      <th>windspeed</th>\n",
+              "      <th>casual</th>\n",
+              "      <th>registered</th>\n",
+              "      <th>cnt</th>\n",
+              "    </tr>\n",
+              "  </thead>\n",
+              "  <tbody>\n",
+              "    <tr>\n",
+              "      <th>0</th>\n",
+              "      <td>1</td>\n",
+              "      <td>2011-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.24</td>\n",
+              "      <td>0.2879</td>\n",
+              "      <td>0.81</td>\n",
+              "      <td>0.0000</td>\n",
+              "      <td>3</td>\n",
+              "      <td>13</td>\n",
+              "      <td>16</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>1</th>\n",
+              "      <td>2</td>\n",
+              "      <td>2011-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.22</td>\n",
+              "      <td>0.2727</td>\n",
+              "      <td>0.80</td>\n",
+              "      <td>0.0000</td>\n",
+              "      <td>8</td>\n",
+              "      <td>32</td>\n",
+              "      <td>40</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>2</th>\n",
+              "      <td>3</td>\n",
+              "      <td>2011-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.22</td>\n",
+              "      <td>0.2727</td>\n",
+              "      <td>0.80</td>\n",
+              "      <td>0.0000</td>\n",
+              "      <td>5</td>\n",
+              "      <td>27</td>\n",
+              "      <td>32</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>3</th>\n",
+              "      <td>4</td>\n",
+              "      <td>2011-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>3</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.24</td>\n",
+              "      <td>0.2879</td>\n",
+              "      <td>0.75</td>\n",
+              "      <td>0.0000</td>\n",
+              "      <td>3</td>\n",
+              "      <td>10</td>\n",
+              "      <td>13</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>4</th>\n",
+              "      <td>5</td>\n",
+              "      <td>2011-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>4</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.24</td>\n",
+              "      <td>0.2879</td>\n",
+              "      <td>0.75</td>\n",
+              "      <td>0.0000</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>5</th>\n",
+              "      <td>6</td>\n",
+              "      <td>2011-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>5</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0.24</td>\n",
+              "      <td>0.2576</td>\n",
+              "      <td>0.75</td>\n",
+              "      <td>0.0896</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>6</th>\n",
+              "      <td>7</td>\n",
+              "      <td>2011-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.22</td>\n",
+              "      <td>0.2727</td>\n",
+              "      <td>0.80</td>\n",
+              "      <td>0.0000</td>\n",
+              "      <td>2</td>\n",
+              "      <td>0</td>\n",
+              "      <td>2</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>7</th>\n",
+              "      <td>8</td>\n",
+              "      <td>2011-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>7</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.20</td>\n",
+              "      <td>0.2576</td>\n",
+              "      <td>0.86</td>\n",
+              "      <td>0.0000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>2</td>\n",
+              "      <td>3</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>8</th>\n",
+              "      <td>9</td>\n",
+              "      <td>2011-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>8</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.24</td>\n",
+              "      <td>0.2879</td>\n",
+              "      <td>0.75</td>\n",
+              "      <td>0.0000</td>\n",
+              "      <td>1</td>\n",
+              "      <td>7</td>\n",
+              "      <td>8</td>\n",
+              "    </tr>\n",
+              "    <tr>\n",
+              "      <th>9</th>\n",
+              "      <td>10</td>\n",
+              "      <td>2011-01-01</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>9</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1</td>\n",
+              "      <td>0.32</td>\n",
+              "      <td>0.3485</td>\n",
+              "      <td>0.76</td>\n",
+              "      <td>0.0000</td>\n",
+              "      <td>8</td>\n",
+              "      <td>6</td>\n",
+              "      <td>14</td>\n",
+              "    </tr>\n",
+              "  </tbody>\n",
+              "</table>\n",
+              "</div>"
+            ],
+            "text/plain": [
+              "   instant      dteday  season  yr  mnth  hr  holiday  weekday  workingday  \\\n",
+              "0        1  2011-01-01       1   0     1   0        0        6           0   \n",
+              "1        2  2011-01-01       1   0     1   1        0        6           0   \n",
+              "2        3  2011-01-01       1   0     1   2        0        6           0   \n",
+              "3        4  2011-01-01       1   0     1   3        0        6           0   \n",
+              "4        5  2011-01-01       1   0     1   4        0        6           0   \n",
+              "5        6  2011-01-01       1   0     1   5        0        6           0   \n",
+              "6        7  2011-01-01       1   0     1   6        0        6           0   \n",
+              "7        8  2011-01-01       1   0     1   7        0        6           0   \n",
+              "8        9  2011-01-01       1   0     1   8        0        6           0   \n",
+              "9       10  2011-01-01       1   0     1   9        0        6           0   \n",
+              "\n",
+              "   weathersit  temp   atemp   hum  windspeed  casual  registered  cnt  \n",
+              "0           1  0.24  0.2879  0.81     0.0000       3          13   16  \n",
+              "1           1  0.22  0.2727  0.80     0.0000       8          32   40  \n",
+              "2           1  0.22  0.2727  0.80     0.0000       5          27   32  \n",
+              "3           1  0.24  0.2879  0.75     0.0000       3          10   13  \n",
+              "4           1  0.24  0.2879  0.75     0.0000       0           1    1  \n",
+              "5           2  0.24  0.2576  0.75     0.0896       0           1    1  \n",
+              "6           1  0.22  0.2727  0.80     0.0000       2           0    2  \n",
+              "7           1  0.20  0.2576  0.86     0.0000       1           2    3  \n",
+              "8           1  0.24  0.2879  0.75     0.0000       1           7    8  \n",
+              "9           1  0.32  0.3485  0.76     0.0000       8           6   14  "
+            ]
+          },
+          "execution_count": 3,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -1468,7 +1720,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.11.9"
+      "version": "3.12.6"
     },
     "orig_nbformat": 4,
     "vscode": {
